[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uneven"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "divyansh0108"

[tool.flwr.app.components]
serverapp = "uneven.server_app:app"
clientapp = "uneven.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1
alpha-values = "0.1,0.5,1,2,5"  # Comma-separated string for alpha values
log-file = "data_distribution.log"
output-file = "alpha_distribution.png"
dataset-path = "/Volumes/Projects/uneven/uneven/data"  # Corrected dataset path

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10